resources/assets/sass/modules/_header.sass
.header
	background-color: $darkGray
	height: 700px
	text-align: center
	display: table
	width: 100%
	color: $lightGray

.header__content
	display: table-cell
	vertical-align: middle

.header__logo--image
	display: block
	margin: 0 auto 25px

.header__logo--text
	font-size: 14px
	display: inline-block
	position: relative
	letter-spacing: 4px
	margin-bottom: 50px

	&::before, &::after
		content: ""
		display: block
		position: absolute
		left: 0
		right: 0
		height: 2px
		background-color: $red

	&::before
		top: -10px

	&::after
		bottom: -11px

.welcome__greeting
	text-transform: uppercase
	font-weight: 900
	letter-spacing: 1px
	font-size: 14px

.welcome__about
	font-size: 14px
	font-weight: 300
	max-width: 430px
	margin: 0 auto
	line-height: 1.5
	margin-bottom: 80px

.contact-btn
	color: $lightGray
	border: 2px solid $red
	border-radius: 6px
	display: inline-block
	padding: 17px 45px
	font-size: 11px
	text-transform: uppercase
	text-decoration: none
	font-family: "Montserrat"
	font-weight: 700
	position: relative
	overflow: hidden

	.contact-btn__text
		position: relative
		z-index: 2

	.contact-btn__bg
		background-color: $red
		position: absolute
		top: 150%
		bottom: 150%
		left: 0
		right: 0
		transform: rotate( 25deg )
		transition: all .3s ease
		z-index: 1

	&:hover
		.contact-btn__bg
			bottom: -30%
			left: -40%
			right: -40%
			top: -30%
			transition: all .3s ease

.scrolldown-btn
	background: url( "../img/scroll-arrow.svg" )
	display: block
	width: 45px
	height: 45px
	border: none
	margin: 0 auto
	margin-top: 90px

